syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.eletra.energy.networkgrpc.grpc";
option java_outer_classname = "TicketProto";

service TicketService {

  rpc CreateTicket (TicketRequest) returns (TicketResponse);

}

message TicketRequest {
  string json_payload = 1;
}

message TicketResponse {
  string ticket_id = 1;
  string status = 2;
}
